--- a/Infraestructure/Infraestructure.csproj
+++ b/Infraestructure/Infraestructure.csproj
@@ -53,6 +53,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Transparencia\Dialogs\InputBox.cs" />
+    <Compile Include="Transparencia\Dialogs\PickIconDialog.cs" />
+    <Compile Include="Transparencia\Dialogs\TaskDialog.cs" />
+    <Compile Include="Transparencia\DPI.cs" />
+    <Compile Include="Transparencia\FormUtils.cs" />
+    <Compile Include="Transparencia\IconManager.cs" />
+    <Compile Include="Transparencia\LayeredWindowHelper.cs" />
+    <Compile Include="Transparencia\ToolStripNonClientRenderer.cs" />
+    <Compile Include="Transparencia\Win10Style.cs" />
+    <Compile Include="Transparencia\Win7Style.cs" />
+    <Compile Include="Transparencia\WinAPI.cs" />
+    <Compile Include="Transparencia\WinVer.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -73,5 +85,6 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
